fixed overlapping nav

--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -5,7 +5,6 @@ body {
 }
 
 .header_container {
-    text-align: center;
     display: inline-block;
     position: relative;
     margin: 0px;
@@ -59,6 +58,7 @@ body {
 }
 
 .main_content {
+    z-index: 0.5;
     position: relative;
     left: 5%;
     width: 45em;
